Crash when undoing bone pose #84920

Closed
opened 2021-01-21 05:47:55 +01:00 by Jehu Campos · 6 comments

System Information
Operating system: Windows 10 64bit
Graphics card: Quadro 5000 RTX

Blender Version
Broken: 2.91
Worked: NA

Crash upon undo after moving bone in pose mode.

Based on the attached .blend file:
Prior to file save:
Mesh selected from outliner. Enter edit mode. Select portion of mesh. Assign to vertex group.

File begins at:
Select armature from outliner. Pose mode is active from previous action. Translate bone. Undo (ctrl+z or edit>undo) > crash.JC-knight_character_rig_001.blend

**System Information** Operating system: Windows 10 64bit Graphics card: Quadro 5000 RTX **Blender Version** Broken: 2.91 Worked: NA Crash upon undo after moving bone in pose mode. Based on the attached .blend file: Prior to file save: Mesh selected from outliner. Enter edit mode. Select portion of mesh. Assign to vertex group. File begins at: Select armature from outliner. Pose mode is active from previous action. Translate bone. Undo (ctrl+z or edit>undo) > crash.[JC-knight_character_rig_001.blend](https://archive.blender.org/developer/F9590483/JC-knight_character_rig_001.blend)
Author

Added subscriber: @CamposCStudios

Added subscriber: @CamposCStudios

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Added subscriber: @ideasman42

Added subscriber: @ideasman42

I have a fix for this, investigating a related issue before committing.

I have a fix for this, investigating a related issue before committing.
Campbell Barton self-assigned this 2021-01-21 12:12:53 +01:00

This issue was referenced by 7b528b2a3a

This issue was referenced by 7b528b2a3ad33b3ad7328213669d8179528e254b

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#84920
No description provided.